globus-gass-cache (9.6-1+gt6.@distro@) @distro@; urgency=low

  * GT-618: GASS Cache error mishandling causes crash

 -- Globus Toolkit <support@globus.org>  Tue, 28 Jul 2015 09:58:30 -0400

globus-gass-cache (9.5-1+gt6.@distro@) @distro@; urgency=low

  * Include more manpages for API
  * Fix some Doxygen issues
  * Quiet some autoconf/automake warnings

 -- Globus Toolkit <support@globus.org>  Mon, 22 Sep 2014 15:24:03 -0400

globus-gass-cache (9.4-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:30 -0400

globus-gass-cache (9.3-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:40 -0400

globus-gass-cache (9.3-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:44 -0400

globus-gass-cache (9.3-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:46 -0400

globus-gass-cache (9.2-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:32 -0400

globus-gass-cache (9.1-3+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:39:58 -0400

globus-gass-cache (9.1-2+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes, Warning Cleanup

 -- Globus Toolkit <support@globus.org>  Thu, 27 Feb 2014 16:48:43 -0500

globus-gass-cache (9.1-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Tue, 25 Feb 2014 16:44:34 -0500

globus-gass-cache (9.0-1+gt6.@distro@) @distro@; urgency=low

  * Repackage for GT6 without GPT

 -- Globus Toolkit <support@globus.org>  Wed, 22 Jan 2014 11:41:11 -0500

globus-gass-cache (8.1-4) unstable; urgency=low
