@@ -13,7 +13,7 @@ include /usr/share/quilt/quilt.make
 
 name = globus-gass-cache
 _name = globus_gass_cache
-version = 9.6
+version = 9.7
 soname = 5
 
 INSTALLDIR = $(CURDIR)/debian/tmp
