@@ -1,6 +1,6 @@
 Name:		globus-gass-cache
 %global _name %(tr - _ <<< %{name})
-Version:	9.6
+Version:	9.7
 Release:	1%{?dist}
 Summary:	Globus Toolkit - Globus Gass Cache
 
@@ -122,6 +122,9 @@ rm -rf $RPM_BUILD_ROOT
 %{_docdir}/%{name}-%{version}/html/*
 
 %changelog
+* Tue Jul 28 2015 Globus Toolkit <support@globus.org> - 9.7-1
+- regression: bad error check
+
 * Tue Jul 28 2015 Globus Toolkit <support@globus.org> - 9.6-1
 - GT-618: GASS Cache error mishandling causes crash
 
